# tuna-installer-niri

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/scripts/: update-index.py
.github/workflows/: publish-flatpak.yml
flatpak/: org.tunaos.InstallerNiri.json
installer/: go.mod  main.go  offline.go
src/: main.rs
ui/: installer.qml
