[package]
name = "tuna-installer-niri"
version = "0.1.0"
edition = "2021"
description = "TUI installer for TunaOS (Niri/wlroots) — drives fisherman bootc install backend"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
